<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeFragment">

    <EditText
        android:id="@+id/etCodigo"
        android:layout_width="194dp"
        android:layout_height="43dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/etNomeTime"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <EditText
        android:id="@+id/etNomeTime"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/etCodigo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etCodigo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCidade"
        android:layout_width="313dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/cidade"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/etNomeTime"
        app:layout_constraintStart_toStartOf="@+id/etNomeTime"
        app:layout_constraintTop_toBottomOf="@+id/etNomeTime" />

    <Button
        android:id="@+id/btnBuscarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        app:layout_constraintBaseline_toBaselineOf="@+id/etCodigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCodigo" />

    <Button
        android:id="@+id/btnInserirTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="@string/inserir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCidade"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/btnAtualizarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:text="@string/atualizar"
        app:layout_constraintBottom_toBottomOf="@+id/btnInserirTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnInserirTime"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnApagarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="26dp"
        android:text="@string/apagar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirTime" />

    <Button
        android:id="@+id/btnListarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="84dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAtualizarTime" />

    <ScrollView
        android:layout_width="410dp"
        android:layout_height="219dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="518dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="0dp"
                android:layout_height="0dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>